# retail-sql-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  ai_usage.md  app.py  app_streamlit.py  main.py  pyproject.toml  rubric.md
data/: customers.csv  products.csv  returns.csv  sales_transactions.csv  stores.csv
engineer_kit/: Engineer_Guide_Retail_SQL_Agent.docx
engineer_kit/assets/: module_map.html  state_machine.html  system_architecture.html
evidence/: count_vs_value_verification.txt  data_load_verification.txt  demo_transcript.txt  followup_demo.txt  safety_validation.txt  streamlit_ui_evidence.md
learning_kit/: Family_Guide_Retail_SQL_Agent.docx
learning_kit/assets/: infographic_pipeline.html  meet_the_team.html  question_journey.html
reference_materials/: Agentic_AI_Explorer_L2.docx
scripts/: demo.py  hello_graph.py  load_data.py  test_graph.py  test_llm.py  test_safety.py  test_sql_gen.py  test_summary.py
src/agent/: db.py  graph.py  nodes.py  safety.py  schema.py  state.py
