[project]
name = "retail-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "mysql-connector-python>=9.7.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
